--- a/PovertyAfrica.css
+++ b/PovertyAfrica.css
@@ -18,6 +18,7 @@ h1 {
 	vertical-align: top;
 }
 .buttons {
+	text-align: left;
     display: block;
 }
 
@@ -33,31 +34,13 @@ h1 {
     -webkit-appearance: none;
     width: 100%;
     height: 15px;
-    border-radius: 5px;   
-    background: #d3d3d3;
+    border-radius: 5px;
     outline: none;
-    opacity: 0.7;
+    opacity: 1;
     -webkit-transition: .2s;
     transition: opacity .2s;
 }
 
-.slider::-webkit-slider-thumb {
-    -webkit-appearance: none;
-    appearance: none;
-    width: 25px;
-    height: 25px;
-    border-radius: 50%; 
-    background: #4CAF50;
-    cursor: pointer;
-}
-
-.slider::-moz-range-thumb {
-    width: 25px;
-    height: 25px;
-    border-radius: 50%;
-    background: #4CAF50;
-    cursor: pointer;
-}
 
 .project-description {
 	width: 50%;
