--- a/PovertyAfrica.css
+++ b/PovertyAfrica.css
@@ -25,13 +25,13 @@ h1 {
 .legend-container {
 	margin-top: 5%;
 	display: block;
+    float:right;
 }
 .slider-container {
     width: 700px; /* Same as the width in the javascript */
     margin: auto;
 }
 .slider {
-    -webkit-appearance: none;
     width: 100%;
     height: 15px;
     border-radius: 5px;
