--- a/PovertyAfrica.css
+++ b/PovertyAfrica.css
@@ -46,7 +46,20 @@ h1, h4 {
 	width: auto;
     margin-left:10%;
 }
-
+.caption{
+    padding-left:50%;
+}
+.staticTooltip{
+    background-color: #ece7f2
+        ;
+    position: absolute;
+    top: 350px;
+    left:80px;
+    width: 250px;
+    height: 250px;
+    text-align:left;
+    padding-right:30px;
+}
 th {
     padding-right:30px;
 }
