--- a/PovertyAfrica.css
+++ b/PovertyAfrica.css
@@ -59,7 +59,21 @@ h1, h4 {
     text-align:left;
     padding-left:5px;
     padding-top:5px;
+    padding-right:5px;
+    
+    border-radius:10px;
+    box-shadow:2px 2px;
 }
+
+.staticTooltip p {
+	width:100%;
+	display:inline-block;
+}
+
+.ttValues {
+	float:right;
+}
+
 th {
     padding-right:30px;
 }
