Repositioning the details

--- a/PovertyAfrica.css
+++ b/PovertyAfrica.css
@@ -52,8 +52,8 @@ h1, h4 {
 	background-color: #ece7f2;
 	width: 400px;
 	position: absolute;
-	top: 170px;
-	left: 80px;
+	top: 200px;
+	right: 20px;
 	text-align:left;
 	padding: 5px 5px 5px 5px;
 	border-radius: 10px;
